# model_deploy

./: .gitignore  README.md
LLM/: DP.py  pre_process.py
LLM/deepspeed/: hello_deepspeed.py  model.py
cuda_from_scratch/00_introduction/: 01_cpp_helloworld.cu  02_numberAdd.cu  03_build_in_variable.cu  04_cluster_helloworld.cu  numberAdd
cuda_from_scratch/02_basic_cuda/: 04_stream_vector_add.cu
cuda_from_scratch/03_memory/: output.nsys-rep  sharememory  sharememory.cu
cuda_from_scratch/05_optimization/: reduce.cu
cuda_from_scratch/custom_operator/: read.cu  softmax_v1.cu  softmax_v2.cu  transpose.cu
cuda_from_scratch/others/: CMakeLists.txt  conv  conv.c  nchw.cpp  test.py
inference/onnxruntime/YoloV5/: main.cpp
inference/onnxruntime/custom_op/: CMakeLists.txt  custom_op.cpp  custom_op.py
inference/tensorRT_from_scratch/tutorial/plugin/: AddScalarPlugin.cu  Makefile  testAddScalarPlugin.py
inference/tensorRT_from_scratch/tutorial/tool/: change_module.py  const_fold.py  dd.py  polygraphy_test.sh
infra/cuda_from_scratch/: Timer.hpp
infra/cuda_from_scratch/00_introduction/: 01_cpp_helloworld.cu  01_helloworld.cu  05_shared_memory.cu  06_heterogeneous_programming.cu  build_in_varibale  helloworld  heterogeneous_programming  shared_memory  test  test.c
infra/cuda_from_scratch/02_basic_cuda/: 02_matrixadd.cu  03_timer.cu  04_stream.cu  error_check.cuh
infra/cuda_from_scratch/custom_operator/: CMakeLists.txt  add.cu  softmax_cpu.cpp  softmax_cudnn.cu
infra/cuda_from_scratch/others/: conv.cpp  conv.cu
infra/mini_autograd/: Tensor.py  main.py
infra/ml_compiler/: 02_tvm_tensorIR.py
infra/onnx/export_onnx/ResNet50/: model.py
infra/onnx/onnx_concept/: 02_mapping_np.py  03_if_opserator.py  04_scan.py
mini_autograd/: micrograd_from_scratch.ipynb  test.py
models/YOLOv1_PyTorch/: cd  export.py  pre_data.py  requirements.txt  test.py
models/YOLOv1_PyTorch/models/: modules.py  resnet.py  yolo.py
models/quantize/: 00tensor_quantize.py
onnx/export_onnx/ResNet50/: infer.py
onnx/export_onnx/SRCNN/: model.py
onnx/onnx_concept/: 01concepts.py
onnx/onnxruntime/: API_reference.py
onnx/onnxruntime/MNIST/: CMakeLists.txt  infer.cpp
onnx/onnxruntime/SRCNN/: infer.py
onnx/onnxruntime/YoloV5/: CMakeLists.txt  infer.cpp  trt_infer.py
quantize/: 01fuse_models.py
tensorRT_from_scratch/tutorial/: MNIST.py
tensorRT_from_scratch/tutorial/include/: Makefile.inc  cookbookHelper.cuh
tensorRT_from_scratch/tutorial/plugin/: AddScalarPlugin.h  cookbookHelper.cuh  gelu.cu  tempnote.note
tensorRT_from_scratch/tutorial/tool/: Build_module.py  print_graph_info.py
